# multi-agent-debate

./: Makefile  README.md  pyproject.toml
src/debate/: __init__.py  agents.py  models.py  moderator.py
tests/: test_agents.py  test_models.py  test_moderator.py
